Use AWS v2 SDK for S3 in product tests